# mujoco_mpc_deploy

./: README.md  setup.py
examples/: go1.py  go2.py  mjpc_gui.py
src/: go1interface.py  go2interface.py
src/mocap_optitrack/: CMakeLists.txt
src/mocap_optitrack/config/: mocap.yaml
src/mocap_optitrack/include/mocap_optitrack/: mocap_config.h  rigid_body_publisher.h  rigid_body_publisher.h.pos  velocity_estimator.h
src/mocap_optitrack/src/: CMakeLists.txt  mocap_config.cpp  rigid_body_publisher.cpp  velocity_estimator.cpp
